--- a/NewFeatures/iOSLocalization/iOSLocalization/en.lproj/Localizable.strings
+++ b/NewFeatures/iOSLocalization/iOSLocalization/en.lproj/Localizable.strings
@@ -5,3 +5,4 @@
   Created by ABDELWAHAB on 24/12/21.
   
 */
+KEEP_MESS = "Thinking of you keeps me awake. Dreaming of you keeps me asleep. Being with you keeps me alive";
